--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/jdiket/Hackathon-Group2-Sep2021-BackEnd#readme",
   "dependencies": {
+    "axios": "^0.21.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^6.0.7"
