--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "global": "^4.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.7",
-    "morgan": "^1.10.0"
+    "mongoose": "^6.2.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.15"
   }
 }
